# sphinx-tsn-theme

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: default.yml
sphinx_tsn_theme/: __init__.py  footer.html  layout.html  searchbox.html  theme.conf  versions.html
sphinx_tsn_theme/static/css/: tiac.css
sphinx_tsn_theme/static/js/: tiac.js_t  tsn.js_t
